2.0 release

	* added support for wolfSSL for SHA-1 hash and HTTPS (no Torrents over SSL)
	* requires OpenSSL minimum version 1.0.0 with SNI support
	* deprecated save_state() and load_state() on session in favour of new
	  write_session_params() and read_session_params()
	* added support for BitTorrent v2 (see docs/upgrade_to_2.0.html)
	* create_torrent() pad_file_limit parameter removed
	* create_torrent() merkle- and optimize-alignment flags removed
	* merkle_tree removed from add_torrent_params
	* announce_entry expose information per v1 and v2 info-hash announces
	* torrent_removed_alert, torrent_deleted_alert, torrent_delete_failed_alert: info_hash member is no longer a sha-1 hash, but (deprecated) implicitly convertible to one
	* undeprecate error_file_metadata for torrent errors related to its metadata
	* remove support for adding a torrent under a UUID (used for previous RSS
	* support)
	* remove deprecated feature to add torrents by file:// URL
	* remove deprecated feature to download .torrent file from URL
	* requires boost >= 1.66 to build
	* update networking API to networking TS compatible boost.asio
	* overhauled disk I/O subsystem to use memory mapped files (where available)
	* libtorrent now requires C++14 to build

1.2.3 release

	* promote errors in parsing listen_interfaces to post listen_failed_alert
	* fix bug in protocol encryption/obfuscation
	* fix buffer overflow in SOCKS5 UDP logic
	* fix issue of rapid calls to file_priority() clobbering each other
	* clear tracker errors on success
	* optimize setting with unlimited unchoke slots
	* fixed restoring of trackers, comment, creation date and created-by in resume data
	* fix handling of torrents with too large pieces
	* fixed division by zero in anti-leech choker
	* fixed bug in torrent_info::swap

1.2.2 release

	* fix cases where the disable_hash_checks setting was not honored
	* fix updating of is_finished torrent status, when changing piece priorities