@@ -288,9 +288,9 @@ rule building ( properties * )
 	}
 
 	local VERSION = [ feature.get-values <cxxstd> : $(properties) ] ;
-	if ! $(VERSION) || $(VERSION) < 14
+	if ! $(VERSION) || $(VERSION) < 17
 	{
-		ECHO "libtorrent requires at least C++14. Specify <cxxstd>14 or higher" ;
+		ECHO "libtorrent requires at least C++17. Specify <cxxstd>17 or higher" ;
 		result += <build>no ;
 	}
 
@@ -445,7 +445,7 @@ rule sanitizer-options ( properties * )
 		local sanitizers ;
 		local extra ;
 		local flags ;
-   
+
 		# sanitize is a clang and GCC feature
 		if <toolset>clang in $(properties)
 		{
@@ -895,6 +895,9 @@ lib torrent
 	<define>BOOST_NO_DEPRECATED
 	<link>shared:<define>BOOST_SYSTEM_SOURCE
 
+	# https://github.com/chriskohlhoff/asio/issues/290#issuecomment-377727614
+	<define>_SILENCE_CXX17_ALLOCATOR_VOID_DEPRECATION_WARNING
+
 	<dht>on:<source>src/kademlia/$(KADEMLIA_SOURCES).cpp
 	<dht>on:<source>src/ed25519/$(ED25519_SOURCES).cpp
 
@@ -934,7 +937,7 @@ for local target in $(headers)
 		# otherwise the object rule doesn't know which language to interpret them as
 		obj header-build/$(target).o : [ cast.cast _ cpp : $(target) ]
 			: <library>/torrent <cxxflags>-fsyntax-only
-			: <cxxstd>14 ;
+			: <cxxstd>17 ;
 		explicit header-build/$(target).o ;
 		header_targets += $(target) ;
 	}
