@@ -1,3 +1,5 @@
+	* libtorrent now requires C++17 to build
+
 2.0 release
 
 	* added support for wolfSSL for SHA-1 hash and HTTPS (no Torrents over SSL)
